--- a/config.json.example
+++ b/config.json.example
@@ -1,8 +1,35 @@
 {
+    "url": "https://theater.logge.top",
     "cf-secret": "b0a1b2a3b4a5b6a7b8a9b0a1b2a3b4a5b6a7b8a9",
     "port": 8080,
     "mail": "someMail@example.com",
     "password": "somePassword",
     "server": "someServer",
-    "adminPassword": "someAdminPassword"
+    "adminPassword": "someAdminPassword",
+        "shows": [
+        {
+            "name": "Aufführung 1",
+            "date": "2023-12-29",
+            "time": "18:00",
+            "totalSeats": "50",
+            "freeSeats": "50"
+        },
+        {
+            "name": "Aufführung 2",
+            "date": "2023-12-29",
+            "time": "20:00",
+            "totalSeats": "50",
+            "freeSeats": "50"
+        }
+    ],
+    "mails": {
+        "reservation": {
+            "subject": "Deine Reservierung für das Winterstück 2023",
+            "body": "Hallo {NAME},\n\nvielen Dank für deine Reservierung. Du hast für den {DATE} um {TIME} {NUMPEOPLE} Plätze reserviert. Vor Ort gibt es freie Platzwahl. Einlass ist jeweils eine halbe Stunde vor Vorstellungsbeginn.\n\nWir freuen uns auf dein Kommen\n\nDie Kolping-Theatergruppe\n\nP.S.: Solltest du an dem Termin nicht können, kannst du deine Reservierung über folgenden Link stornieren: {INFO_LINK}"
+        },
+        "strono": {
+            "subject": "Deine Stornierung für das Winterstück 2023",
+            "body": "Hallo {NAME},\n\nhiermit bestätigen wir deine Stornierung. Du hast für den {DATE} um {TIME} {NUMPEOPLE} Plätze storniert.\n\nWir hoffen, dass du zu einem anderen Termin kommen kannst.\n\nDie Kolping-Theatergruppe"
+        }
+    }
 }
